<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">
    <!--android:fitsSystemWindows="true"-->
    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="start"
        android:background="@color/colorWhite"
        android:choiceMode="singleChoice"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_80sdp"
            android:background="@color/colorBlue2">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_50sdp"
                android:layout_gravity="center"
                android:background="@drawable/logo" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/menu_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/_5sdp"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingRight="@dimen/_10sdp"
            android:paddingTop="@dimen/_5sdp">

            <com.makeramen.roundedimageview.RoundedImageView
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_gravity="center"
                android:src="@drawable/home"
                app:riv_border_color="@color/colorPrimary"
                app:riv_border_width="@dimen/_2sdp"
                app:riv_corner_radius="20dip"
                app:riv_mutate_background="true"
                app:riv_oval="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="@dimen/_20sdp"
                android:text="@string/home"
                android:textSize="@dimen/_16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/button_disable_light" />

        <LinearLayout
            android:id="@+id/menu_customer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/_5sdp"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingRight="@dimen/_10sdp"
            android:paddingTop="@dimen/_5sdp">

            <com.makeramen.roundedimageview.RoundedImageView
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_gravity="center"
                android:src="@drawable/ic_customer"
                app:riv_border_color="@color/colorPrimary"
                app:riv_border_width="@dimen/_2sdp"
                app:riv_corner_radius="20dip"
                app:riv_mutate_background="true"
                app:riv_oval="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="@dimen/_20sdp"
                android:text="@string/customer_info"
                android:textSize="@dimen/_16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/button_disable_light" />

        <LinearLayout
            android:id="@+id/menu_instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/_5sdp"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingRight="@dimen/_10sdp"
            android:paddingTop="@dimen/_5sdp">

            <com.makeramen.roundedimageview.RoundedImageView
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_gravity="center"
                android:src="@drawable/ic_huongdan"
                app:riv_border_color="@color/colorPrimary"
                app:riv_border_width="@dimen/_2sdp"
                app:riv_corner_radius="20dip"
                app:riv_mutate_background="true"
                app:riv_oval="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="@dimen/_20sdp"
                android:text="@string/huongdansudung"
                android:textSize="@dimen/_16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/button_disable_light" />

        <LinearLayout
            android:id="@+id/menu_introduce"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/_5sdp"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingRight="@dimen/_10sdp"
            android:paddingTop="@dimen/_5sdp">

            <com.makeramen.roundedimageview.RoundedImageView
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_gravity="center"
                android:src="@drawable/ic_gioithieu"
                app:riv_border_color="@color/colorPrimary"
                app:riv_border_width="@dimen/_2sdp"
                app:riv_corner_radius="20dip"
                app:riv_mutate_background="true"
                app:riv_oval="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="@dimen/_20sdp"
                android:text="@string/gioithieuhoatdong"
                android:textSize="@dimen/_16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/_5sdp"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingRight="@dimen/_10sdp"
            android:paddingTop="@dimen/_5sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Dịch vụ"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/menu_buyElectric"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/_5sdp"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingRight="@dimen/_10sdp"
            android:paddingTop="@dimen/_5sdp">

            <com.makeramen.roundedimageview.RoundedImageView
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_gravity="center"
                android:src="@drawable/ic_dangky"
                app:riv_border_color="@color/colorPrimary"
                app:riv_border_width="@dimen/_2sdp"
                app:riv_corner_radius="20dip"
                app:riv_mutate_background="true"
                app:riv_oval="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="@dimen/_20sdp"
                android:text="@string/dichvucapmoi"
                android:textSize="@dimen/_16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/button_disable_light" />

        <LinearLayout
            android:id="@+id/menu_DichVuSuDung"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/_5sdp"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingRight="@dimen/_10sdp"
            android:paddingTop="@dimen/_5sdp">

            <com.makeramen.roundedimageview.RoundedImageView
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_gravity="center"
                android:src="@drawable/ic_yeucau2"
                app:riv_border_color="@color/colorPrimary"
                app:riv_border_width="@dimen/_2sdp"
                app:riv_corner_radius="20dip"
                app:riv_mutate_background="true"
                app:riv_oval="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="@dimen/_20sdp"
                android:text="@string/dichvutrongquatrinh"
                android:textSize="@dimen/_16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/button_disable_light" />

        <LinearLayout
            android:id="@+id/menu_TraCuuThongTin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/_5sdp"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingRight="@dimen/_10sdp"
            android:paddingTop="@dimen/_5sdp">

            <com.makeramen.roundedimageview.RoundedImageView
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_gravity="center"
                android:src="@drawable/ic_search"
                app:riv_border_color="@color/colorPrimary"
                app:riv_border_width="@dimen/_2sdp"
                app:riv_corner_radius="20dip"
                app:riv_mutate_background="true"
                app:riv_oval="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="@dimen/_20sdp"
                android:text="@string/tracuuthongtin"
                android:textSize="@dimen/_16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/button_disable_light" />

        <LinearLayout
            android:id="@+id/menu_DichVuHoTro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/_5sdp"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingRight="@dimen/_10sdp"
            android:paddingTop="@dimen/_5sdp">

            <com.makeramen.roundedimageview.RoundedImageView
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_gravity="center"
                android:src="@drawable/ic_dichvuhotro"
                app:riv_border_color="@color/colorPrimary"
                app:riv_border_width="@dimen/_2sdp"
                app:riv_corner_radius="20dip"
                app:riv_mutate_background="true"
                app:riv_oval="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="@dimen/_20sdp"
                android:text="@string/dichvuhotro"
                android:textSize="@dimen/_16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/button_disable_light" />

        <LinearLayout
            android:id="@+id/menu_huongDanDichVu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/_5sdp"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingRight="@dimen/_10sdp"
            android:paddingTop="@dimen/_5sdp">

            <com.makeramen.roundedimageview.RoundedImageView
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_gravity="center"
                android:src="@drawable/ic_huongdandichvu"
                app:riv_border_color="@color/colorPrimary"
                app:riv_border_width="@dimen/_2sdp"
                app:riv_corner_radius="20dip"
                app:riv_mutate_background="true"
                app:riv_oval="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="@dimen/_20sdp"
                android:text="@string/huongdancacdichvu"
                android:textSize="@dimen/_16sp" />
        </LinearLayout>

    </LinearLayout>

</android.support.v4.widget.DrawerLayout>